--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
+@import url(//db.onlinewebfonts.com/c/3f668921460e0feff1eb01deb0dd4c68?family=Trade+Gothic+LT+Std);
+
 .App {
   text-align: center;
+  font-family: TradeGothic,Helvetica,Arial,sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.courses {
+  padding-top:30px;
+  padding-right:100px;
+  padding-left:30px;
+  background-color:#223C50;
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.closeButton {
+  margin:20px;
+  padding:10px;
+  background-color: #96DDE7;
+  border-radius:5px;
+  
+}
+.courseDiv {
+  display:flex;
+  flex-direction:row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color:#ffff;
+  padding:50px;
+  margin-bottom:20px;
+  font-size:25px;
 }
 
-.App-link {
-  color: #61dafb;
+.click-text {
+  font-size:50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.eachCourse {
+  font-size: 30px;
+ 
 }
+
+hr {
+  width:75%;
+}
+
+.courseDetails div{
+  padding:10px;
+}
+
+.courseDetails select {
+  font-size:20px;
+  padding:10px;
+  border-radius:5px;
+  border:none;
+
+}
+
